@@ -11,6 +11,10 @@ Summary -- Release highlights
 
 New checkers
 ============
+* Update format parsing to support f-strings and the str.format function
+
+  Closes #6163
+  Closes #6085
 
 * Added new checker ``typevar-name-mismatch``: TypeVar must be assigned to a variable with the same name as its name argument.
 
