@@ -5,6 +5,8 @@ bad-string-format-type:27:0:27:10::Argument 'builtins.float' does not match form
 bad-string-format-type:28:0:28:24::Argument 'builtins.float' does not match format type 'x':UNDEFINED
 bad-string-format-type:29:0:29:9::Argument 'builtins.list' does not match format type 'd':UNDEFINED
 bad-string-format-type:30:0:30:23::Argument 'builtins.list' does not match format type 'd':UNDEFINED
-bad-string-format-type:33:0:33:11::Argument 'builtins.str' does not match format type 'd':UNDEFINED
-bad-string-format-type:34:0:34:22::Argument 'builtins.str' does not match format type 'd':UNDEFINED
-bad-string-format-type:38:0:38:29::Argument 'builtins.str' does not match format type 'd':UNDEFINED
+bad-string-format-type:36:0:36:10::Argument 'builtins.str' does not match format type 'd':UNDEFINED
+bad-string-format-type:37:0:37:18::Argument 'builtins.str' does not match format type 'd':UNDEFINED
+bad-string-format-type:41:0:41:11::Argument 'builtins.str' does not match format type 'd':UNDEFINED
+bad-string-format-type:42:0:42:22::Argument 'builtins.str' does not match format type 'd':UNDEFINED
+bad-string-format-type:46:0:46:29::Argument 'builtins.str' does not match format type 'd':UNDEFINED
